--- a/src/components/home-page/features/features.module.css
+++ b/src/components/home-page/features/features.module.css
@@ -8,9 +8,10 @@
 }
 
 .feature {
-	background-color: rgb(64, 123, 255, 0.35);
-	border-radius: var(--border-radius-regular);
-	overflow: hidden;
+    background-color: rgb(64, 123, 255, 0.35);
+    border-radius: var(--border-radius-regular);
+    overflow: hidden;
+    /* opacity: 0; */
 }
 
 .feature li {
@@ -69,5 +70,16 @@
     .feature:nth-child(even) {
         background-color: #fff;
         border: 2px solid;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(5vh);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
