--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,11 +27,12 @@ body:has(main[data-page='home']) {
 
 body:has(main[data-page='home']) header {
     position: absolute;
-    top: 2em;
+    top: 1em;
     left: 50%;
+    background-color: transparent;
     margin: unset;
     transform: translateX(-50%);
-    transition: border-radius 0.5s;
+    transition: border-radius 0.5s, background-color 0.5s;
 }
 
 main {
@@ -50,13 +51,13 @@ section {
 }
 
 h1 {
-    font-size: 4em;
+    font-size: 3em;
+    font-weight: 600;
     line-height: 1.1;
 }
 
 h2 {
-    font-size: 3em;
-    font-weight: 600;
+    font-size: 4em;
     line-height: 1.1;
 }
 
