--- a/src/components/home-page/main/main.module.css
+++ b/src/components/home-page/main/main.module.css
@@ -19,7 +19,6 @@
 	display: grid;
     width: 100%;
 	grid-gap: 0.5em;
-    font-size: 2vw;
 	transform: translate(-50%, -50%) rotate(-10deg);
 }
 
@@ -89,6 +88,10 @@
         height: 100vh;
     }
 
+	.lines_wrapper {
+		font-size: 2vw;
+	}
+
 	.inner {
 		font-size: 1.5em;
 	}
@@ -98,6 +101,10 @@
     .section {
         height: 70vh;
     }
+
+	.lines_wrapper {
+		font-size: 2.5vh;
+	}
 }
 
 @media screen and (max-width: 550px) {
