--- a/src/components/home-page/features/features.module.css
+++ b/src/components/home-page/features/features.module.css
@@ -5,17 +5,12 @@
 .feature_list {
 	display: grid;
 	grid-gap: 2em 1em;
+    list-style-type: none;
 }
 
-.feature {
-    background-color: rgb(64, 123, 255, 0.35);
-    border-radius: var(--border-radius-regular);
-    overflow: hidden;
-    /* opacity: 0; */
-}
-
-.feature li {
+.feature_inner {
 	display: grid;
+    height: 100%;
 	grid-template-areas:
 		'icon .'
 		'icon title'
@@ -25,6 +20,9 @@
 	grid-template-rows: 1fr max-content max-content 1fr;
 	grid-gap: 0.2em 1em;
     align-items: center;
+    background-color: rgb(64, 123, 255, 0.35);
+    border-radius: var(--border-radius-regular);
+    overflow: hidden;
 	padding: 2em;
 }
 
@@ -51,12 +49,18 @@
 
     .feature:nth-child(2) {
         grid-column: 2/4;
+    }
+
+    .feature:nth-child(2) .feature_inner {
         background-color: #fff;
         border: 2px solid;
     }
     
     .feature:nth-child(3) {
         grid-column: 1/3;
+    }
+
+    .feature:nth-child(3) .feature_inner {
         background-color: #fff;
         border: 2px solid;
     }
@@ -67,7 +71,7 @@
         font-size: 1.3em;
     }
 
-    .feature:nth-child(even) {
+    .feature:nth-child(even) .feature_inner {
         background-color: #fff;
         border: 2px solid;
     }
