--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-*:not(p) {
+* {
     text-decoration: none;
     margin: 0;
     padding: 0;
@@ -66,6 +66,11 @@ h3 {
     font-weight: 600;
     line-height: 1.1;
 }
+
+::-webkit-scrollbar {
+    display: none;
+}
+
 
 @media screen and (max-width: calc(1200px + 10vw)) {
     body {
