--- a/src/components/home-page/main/main.module.css
+++ b/src/components/home-page/main/main.module.css
@@ -10,43 +10,32 @@
     top: 50%;
     left: 50%;
     display: grid;
-    width: 100%;
     grid-gap: 0.5em;
     transform: translate(-50%, -50%) rotate(-10deg);
 }
 
 .line {
     position: relative;
-    height: 10em;
 }
 
 .line_list_wrapper {
     position: absolute;
-    height: 100%;
 }
 
 .line_list {
     display: grid;
     height: 100%;
-    grid-auto-flow: column;
-    grid-template-columns: max-content;
     grid-gap: 0.5em;
 }
 
-.line_list:nth-child(1) {
-    position: absolute;
-    top: 0;
-    left: calc(-100% - 0.5em);
-}
+.line_list:nth-child(1),
 .line_list:nth-child(3) {
     position: absolute;
-    top: 0;
-    left: calc(100% + 0.5em);
 }
 
 .item {
     position: relative;
-    width: 8em;
+    width: 100%;
     height: 100%;
     border-radius: var(--border-radius-small);
     overflow: hidden;
@@ -62,13 +51,13 @@
     position: absolute;
     inset: 0;
     display: grid;
-    place-items: center;
     background-color: rgb(49, 64, 100, 0.5);
     color: #fff;
     font-weight: 600;
     text-align: center;
     text-shadow: 0 0 0.3em var(--secondary);
-    padding: 1em;
+    padding: 0.25em;
+    place-items: center;
 }
 
 .content {
@@ -90,12 +79,35 @@
         height: 100vh;
     }
 
+    .content {
+        font-size: 1.25em;
+    }
+
+    /* direction */
     .lines_wrapper {
+        height: 100%;
+        grid-auto-flow: column;
         font-size: 2vw;
     }
 
-    .content {
-        font-size: 1.25em;
+    .line_list_wrapper {
+        width: 100%;
+    }
+
+    .line {
+        width: 10em;
+    }
+
+    .line_list {
+        grid-auto-flow: row;
+        grid-auto-rows: 14em;
+    }
+
+    .line_list:nth-child(1) {
+        top: calc(-100% - 0.5em);
+    }
+    .line_list:nth-child(3) {
+        top: calc(100% + 0.5em);
     }
 }
 
@@ -104,12 +116,36 @@
         height: 70vh;
     }
 
+    .content {
+        font-size: 0.9em;
+    }
+
+    /* direction */
     .lines_wrapper {
+        width: 100%;
         font-size: 2.5vh;
     }
 
-    .content {
-        font-size: 0.9em;
+    .line_list_wrapper {
+        height: 100%;
+    }
+
+    .line {
+        height: 10em;
+    }
+
+    .line_list {
+        grid-auto-flow: column;
+        grid-auto-columns: 8em;
+    }
+
+    .line_list:nth-child(1) {
+        top: 0;
+        left: calc(-100% - 0.5em);
+    }
+    .line_list:nth-child(3) {
+        top: 0;
+        left: calc(100% + 0.5em);
     }
 }
 
