animation HOC changed for mobile and tablet

--- a/src/components/home-page/about/about.module.css
+++ b/src/components/home-page/about/about.module.css
@@ -70,11 +70,9 @@
 
 .headline {
     grid-area: headline;
-    opacity: 0;
 }
 
 .copy {
-    opacity: 0;
     grid-area: copy;
     font-size: 1.4em;
 }
@@ -86,22 +84,6 @@
 
 .in_view .from_block {
     animation: fromAnim 0.2s ease-in 3s forwards;
-}
-
-.in_view:has(.phone_overlay) .headline {
-    animation: fadeIn 1s ease-out 1.5s forwards;
-}
-
-.in_view:has(.phone_overlay) .copy {
-    animation: fadeIn 1s ease-out 1.75s forwards;
-}
-
-.in_view .headline {
-    animation: fadeIn 1s ease-out 1.25s forwards;
-}
-
-.in_view .copy {
-    animation: fadeIn 1s ease-out 1.5s forwards;
 }
 
 @media screen and (min-width: 769px) {
@@ -132,6 +114,28 @@
 
     .headline {
         margin-top: 0.5em;
+        opacity: 0;
+    }
+
+    .copy {
+        opacity: 0;
+    }
+
+    /* in view */
+    .in_view:has(.phone_overlay) .headline {
+        animation: fadeIn 1s ease-out 1.5s forwards;
+    }
+
+    .in_view:has(.phone_overlay) .copy {
+        animation: fadeIn 1s ease-out 1.75s forwards;
+    }
+
+    .in_view .headline {
+        animation: fadeIn 1s ease-out 1.25s forwards;
+    }
+
+    .in_view .copy {
+        animation: fadeIn 1s ease-out 1.5s forwards;
     }
 }
 
