body scroller removed from mobile and tablet

--- a/src/components/common/scroller/scroller.module.css
+++ b/src/components/common/scroller/scroller.module.css
@@ -39,7 +39,7 @@ body > .scroller_line {
 
 @media screen and (max-width: 768px) {
     body > .scroller_line {
-        width: 1vw;
+        display: none;
     }
 
     .overlay .scroller_line {
