--- a/src/components/home-page/main/main.module.css
+++ b/src/components/home-page/main/main.module.css
@@ -10,6 +10,7 @@
     top: 50%;
     left: 50%;
     display: grid;
+    width: 100%;
     grid-gap: 0.5em;
     transform: translate(-50%, -50%) rotate(-10deg);
 }
@@ -20,12 +21,19 @@
 
 .line_list_wrapper {
     position: absolute;
+    height: 100%;
 }
 
 .line_list {
+    --direction: -1;
     display: grid;
     height: 100%;
-    grid-gap: 0.5em;
+    grid-auto-flow: column;
+    grid-gap: 1.5em;
+}
+
+.line:nth-child(even) .line_list {
+    --direction: 1;
 }
 
 .line_list:nth-child(1),
@@ -33,8 +41,18 @@
     position: absolute;
 }
 
+.line_list:nth-child(1) {
+    top: 0;
+    left: calc(-100% - 1.5em);
+}
+.line_list:nth-child(3) {
+    top: 0;
+    left: calc(100% + 1.5em);
+}
+
 .item {
     position: relative;
+    display: grid;
     width: 100%;
     height: 100%;
     border-radius: var(--border-radius-small);
@@ -45,20 +63,12 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
-    padding: 0.25em;
 }
 
 .copy {
-    position: absolute;
-    inset: 0;
-    display: grid;
-    place-items: center;
-    background-color: rgb(49, 64, 100, 0.5);
-    color: #fff;
+    color: var(--primary);
     font-weight: 600;
     text-align: center;
-    text-shadow: 0 0 0.3em var(--secondary);
-    padding: 0.25em;
 }
 
 .content {
@@ -68,7 +78,7 @@
     justify-items: center;
     align-content: center;
     gap: 2em;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.35);
     color: #fff;
     text-align: center;
     padding-top: 3em;
@@ -86,39 +96,20 @@
 
     /* direction */
     .line {
-        width: 10em;
+        height: 11em;
     }
 
     .lines_wrapper {
-        height: 100%;
-        grid-auto-flow: column;
-        font-size: 2vw;
-    }
-
-    .line_list_wrapper {
-        width: 100%;
-    }
-
-    .line:nth-child(even) .line_list_wrapper {
-        --direction: 1;
+        font-size: 1.8vw;
     }
 
     .line_list {
-        --direction: -1;
-        grid-auto-flow: row;
-        grid-auto-rows: 14em;
-        animation: movingY 60s linear infinite;
+        grid-auto-columns: 10em;
+        animation: movingX 50s linear infinite;
     }
 
-    .line:nth-child(even) .line_list {
-        --direction: 1;
-    }
-
-    .line_list:nth-child(1) {
-        top: calc(-100% - 0.5em);
-    }
-    .line_list:nth-child(3) {
-        top: calc(100% + 0.5em);
+    .item {
+        grid-template-rows: 7em max-content;
     }
 }
 
@@ -137,32 +128,12 @@
     }
 
     .lines_wrapper {
-        width: 100%;
         font-size: 2.5vh;
     }
 
-    .line_list_wrapper {
-        height: 100%;
-    }
-
     .line_list {
-        --direction: -1;
-        grid-auto-flow: column;
         grid-auto-columns: 8em;
         animation: movingX 40s linear infinite;
-    }
-
-    .line:nth-child(even) .line_list {
-        --direction: 1;
-    }
-
-    .line_list:nth-child(1) {
-        top: 0;
-        left: calc(-100% - 0.5em);
-    }
-    .line_list:nth-child(3) {
-        top: 0;
-        left: calc(100% + 0.5em);
     }
 }
 
@@ -172,13 +143,12 @@
     }
 }
 
-
 @keyframes movingX {
     from {
         transform: translateX(0);
     }
     to {
-        transform: translateX(calc((100% + 0.5em) * var(--direction)));
+        transform: translateX(calc((100% + 1.5em) * var(--direction)));
     }
 }
 
@@ -187,6 +157,6 @@
         transform: translateY(0);
     }
     to {
-        transform: translateY(calc((100% + 0.5em) * var(--direction)));
+        transform: translateY(calc((100% + 1.5em) * var(--direction)));
     }
 }
