--- a/src/components/home-page/slider/slider.module.css
+++ b/src/components/home-page/slider/slider.module.css
@@ -64,17 +64,22 @@
 }
 
 .image {
-	background-color: rebeccapurple;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
 }
 
 .slider_copy {
 	display: grid;
+	grid-template-areas: 'quotes' 'about' 'name' 'position';
 	grid-template-rows: max-content 1fr max-content max-content;
-	padding: 2em 2em 1.5em 1em;
 	gap: 1em;
+	padding: 2em 2em 1.5em 1em;
 }
 
 .quotes {
+	grid-area: quotes;
     width: 2.5em;
     height: 2.5em;
 	background: url(/icons/quotes.svg) center no-repeat;
@@ -82,13 +87,19 @@
 }
 
 .about {
+	grid-area: about;
 	display: grid;
 	gap: 1em;
     /* overflow: auto; */
 }
 
 .name {
+	grid-area: name;
     font-size: 1.3em;
+}
+
+.position {
+	grid-area: position;
 }
 
 @media screen and (min-width: 769px) {
