--- a/src/components/home-page/features/features.module.css
+++ b/src/components/home-page/features/features.module.css
@@ -3,43 +3,43 @@
 }
 
 .feature_list {
-	display: grid;
-	grid-gap: 2em 1em;
+    display: grid;
+    grid-gap: 2em 1em;
     list-style-type: none;
 }
 
 .feature_inner {
-	display: grid;
+    display: grid;
     height: 100%;
-	grid-template-areas:
-		'icon .'
-		'icon title'
-		'icon copy'
-		'icon .';
-	grid-template-columns: 5em 1fr;
-	grid-template-rows: 1fr max-content max-content 1fr;
-	grid-gap: 0.2em 1em;
+    grid-template-areas:
+        'icon .'
+        'icon title'
+        'icon copy'
+        'icon .';
+    grid-template-columns: 5em 1fr;
+    grid-template-rows: 1fr max-content max-content 1fr;
+    grid-gap: 0.2em 1em;
     align-items: center;
     background-color: rgb(64, 123, 255, 0.35);
     border-radius: var(--border-radius-regular);
     overflow: hidden;
-	padding: 2em;
+    padding: 2em;
 }
 
 .icon {
     width: 100%;
     height: auto;
-	grid-area: icon;
+    grid-area: icon;
 }
 
 .title {
-	grid-area: title;
-	font-size: 1.35em;
-	font-weight: 700;
+    grid-area: title;
+    font-size: 1.35em;
+    font-weight: 700;
 }
 
 .copy {
-	grid-area: copy;
+    grid-area: copy;
 }
 
 @media screen and (min-width: 769px) {
@@ -47,20 +47,23 @@
         grid-template-columns: 1fr 0.5fr 1fr;
     }
 
-    .feature:nth-child(2) {
+    .feature:nth-child(1) {
+        width: 50%;
+        grid-column: 1/4;
+        margin: auto;
+    }
+
+    .feature:nth-child(3) {
         grid-column: 2/4;
     }
 
-    .feature:nth-child(2) .feature_inner {
-        background-color: #fff;
-        border: 2px solid;
-    }
-    
-    .feature:nth-child(3) {
+    .feature:nth-child(4) {
         grid-column: 1/3;
     }
 
-    .feature:nth-child(3) .feature_inner {
+    .feature:nth-child(1) .feature_inner,
+    .feature:nth-child(3) .feature_inner,
+    .feature:nth-child(4) .feature_inner {
         background-color: #fff;
         border: 2px solid;
     }
@@ -71,7 +74,7 @@
         font-size: 1.3em;
     }
 
-    .feature:nth-child(even) .feature_inner {
+    .feature:nth-child(odd) .feature_inner {
         background-color: #fff;
         border: 2px solid;
     }
