AI feature block changed

--- a/src/components/home-page/features/features.module.css
+++ b/src/components/home-page/features/features.module.css
@@ -53,6 +53,10 @@
     margin: 0.5em 0;
 }
 
+.copy p:nth-child(1) {
+    font-weight: 600;
+}
+
 @media screen and (min-width: 769px) {
     .feature_list {
         grid-template-columns: 1fr 0.5fr 1fr;
