--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,17 +19,14 @@ body {
     min-height: 100vh;
     grid-template-areas: 'header' 'main' 'footer';
     grid-template-rows: max-content 1fr max-content;
-    grid-template-rows: 3.5em 1fr max-content;
     grid-gap: 6em;
-    overflow-x: hidden;
-    padding-top: 1em;
     color: var(--darkGrey);
+    overflow-x: hidden;
 }
 
 body:has(main[data-page='home']) {
     grid-template-areas: 'main' 'footer';
     grid-template-rows: 1fr max-content;
-    padding-top: 0;
 }
 
 body:has(main[data-page='home']) header {
@@ -40,10 +37,6 @@ body:has(main[data-page='home']) header {
     margin: unset;
     transform: translateX(-50%);
     transition: border-radius 0.5s, background-color 0.5s;
-}
-
-header {
-    grid-area: header;
 }
 
 main {
@@ -66,6 +59,15 @@ section {
     margin: auto;
 }
 
+header {
+    grid-area: header;
+    margin: 1em auto 0;
+}
+
+ul {
+    list-style-type: none;
+}
+
 h1 {
     font-size: 3em;
     font-weight: 600;
@@ -83,26 +85,31 @@ h3 {
     line-height: 1.1;
 }
 
+h4 {
+    font-size: 1.5em;
+    font-weight: 600;
+    line-height: 1.1;
+}
+
 textarea {
-    resize: none;
-    height: 9em;
     width: 100%;
+    height: 9em;
+    resize: none;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-	-webkit-appearance: none;
-	margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 input[type='number'] {
-	-moz-appearance: textfield;
+    -moz-appearance: textfield;
 }
 
 ::-webkit-scrollbar {
     display: none;
 }
-
 
 @media screen and (max-width: calc(1200px + 10vw)) {
     body {
