--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,6 +91,18 @@ h4 {
     line-height: 1.1;
 }
 
+p {
+    margin: 1em 0;
+}
+
+p:first-child {
+    margin-top: 0;
+}
+
+p:last-child {
+    margin-bottom: 0;
+}
+
 textarea {
     width: 100%;
     height: 9em;
